--- a/video.html
+++ b/video.html
@@ -3,12 +3,47 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>播放视频</title>
+    <script type="text/javascript">
+
+        function ChangeVideo(obj, value) {
+            var video = document.getElementById('Video');
+            var src = document.getElementById('VideoSrc');
+            src.src = value;
+            video.load();
+            document.getElementById('movename').innerHTML = obj.innerHTML;
+        }
+    </script>
 </head>
 <body>
+    <div>
+        当前播放：<span id="movename">无</span>
+    </div>
     <div style="width:100%;text-align:center;">
         <video width="1024" height="600" autoplay="autoplay">
             <source src="http://hktv1.ts33.net:8901/movie/dkp0445.mp4" />
         </video>
+    </div>
+    <div>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/01.mp4');">何以笙箫默第1集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/02.mp4');">何以笙箫默第2集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/03.mp4');">何以笙箫默第3集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/04.mp4');">何以笙箫默第4集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/05.mp4');">何以笙箫默第5集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/06.mp4');">何以笙箫默第6集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/07.mp4');">何以笙箫默第7集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/08.mp4');">何以笙箫默第8集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/09.mp4');">何以笙箫默第9集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/10.mp4');">何以笙箫默第10集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/11.mp4');">何以笙箫默第11集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/12.mp4');">何以笙箫默第12集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/13.mp4');">何以笙箫默第13集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/14.mp4');">何以笙箫默第14集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/15.mp4');">何以笙箫默第15集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/16.mp4');">何以笙箫默第16集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/17.mp4');">何以笙箫默第17集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/18.mp4');">何以笙箫默第18集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/19.mp4');">何以笙箫默第19集</button>
+        <button onclick="ChangeVideo(this,'http://stv01.ts33.net:8901/opera/hysxm/20.mp4');">何以笙箫默第20集</button>
     </div>
 </body>
 </html>
